--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@ html {
 }
 
 .page {
+  display: flex;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -35,4 +36,273 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: flex;
+  align-items: end;
+  column-gap: 30px;
+  flex-direction: row;
+  width: 1134.67px;
+  margin: auto;
+  
+}
+
+.search-form {
+  display: flex;
+  gap: 40px;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.content__list {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  overflow: auto;
+  height: 298px;
+}
+
+.content__details {
+  width: 100%;
+  height: 100%;
+}
+
+.title {
+padding-bottom: 26px;
+font-weight: 700;
+font-size: 75px;
+line-height: 94%;
+text-transform: uppercase;
+color: #fff;
+font-family: Oswald;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.result__video-container {
+  height: 386px;
+  width: 711px;
+  padding-bottom: 16px;
+  position: relative;
+}
+
+.result__video {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.content__list-item {
+  width: 394px;
+  height: 103px;
+}
+
+.content__list-item:not(:last-child) {
+  margin: 0 0 34px;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: start;
+}
+
+.content__video-card-thumbnail {
+  height: 103px;
+  width: 194px;
+  flex-shrink: 0;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__video-card-description-container {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.content__list {
+  position: relative;
+}
+
+.search-form__fieldset-title {
+  font-weight: 400;
+  font-size: 18px;
+  color: #fff;
+  margin-bottom: 5px;
+  line-height: normal;
+}
+
+.content__card-link {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  margin: 2px;
+}
+
+.content__video-card-title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 100%;
+  text-transform: uppercase;
+  margin-bottom: 6px;
+  font-family: Oswald;
+}
+
+.content__video-card-description {
+  font-weight: 400;
+  font-size: 18px;
+  color: #fff;
+  line-height: 16.2px;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  cursor: pointer;
+}
+
+.button {
+  border: 1px solid #fff;
+  padding: 6px 73.5px;
+  color: #fff;
+  font-family: Fira Sans Condensed;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: normal;
+  text-align: center;
+  background: transparent;
+  cursor: pointer;
+}
+
+.search-form__submit-button {
+  align-self: end;
+}
+
+.button:hover {
+    text-decoration: underline;
+}
+
+.button:focus {
+  outline: 0;
+}
+
+.button:active {
+  background: #545050;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.more-button {
+    width: 399px;
+}
+
+.search-form__textfield {
+  min-width: 228px;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  border-right: 0;
+  border-left: 0;
+  padding: 2.5px 14px 2.5px 0;
+  font-weight: 400;
+  background: transparent;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  line-height: normal;
+  appearance: none;
+}
+
+.search-form__textfield:active {
+  outline: 1px solid #fff;
+  outline-offset: -1px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  align-items: center;
+  column-gap: 15px;
+}
+
+.search-form__pseudo-checkbox {
+  position: relative;
+  display: flex;
+  flex-shrink: 0;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+  margin-right: 5px;
+}
+
+.search-form__textfield:focus {
+  outline: 0;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__pseudo-checkbox::before {
+  display: none;
+  content: "";
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  margin: auto;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
+  display: block;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
+  text-underline-offset: 2px;
+}
+
+.content__card-link {
+  display: block;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+  text-underline-offset: 2px;
+}
+
+.content__card-link:active {
+  background: #545050;
+}
+
+.content__card-link_current {
+  background: #545050;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.content__list::-webkit-scrollbar {
+  display: none;
 }
